fix line wrap

--- a/dev/templates/_includes/components/c-seasons-video-list/c-seasons-video-list.scss
+++ b/dev/templates/_includes/components/c-seasons-video-list/c-seasons-video-list.scss
@@ -33,6 +33,7 @@
 			margin-right: 16px;
 			position: relative;
 			&-title {
+				white-space: nowrap;
 				font-style: normal;
 				font-weight: 600;
 				line-height: normal;
